# ws2markdown

./: Cargo.toml  README.md  README.ws
.github/workflows/: ci.yml
src/: main.rs  wordstar.pest
