[package]
name = "ws2markdown"
description = "A WordStar to Markdown converter"
version = "0.2.0"
authors = ["Cthulhux <git@tuxproject.de>"]
edition = "2021"
license = "CDDL-1.1"
repository = "https://code.rosaelefanten.org/ws2markdown"
categories = ["command-line-utilities"]
keywords = ["wordstar", "markdown"]

[dependencies]
anyhow = "1.0"
pest = "2.7"
pest_derive = "2.7"
rfd = "0.11"
